# study_onednn

./: .gitmodules  CMakeLists.txt  README.md
3rd/: .gitignore  README.md
header/: example_utils.hpp  my_log.hpp  my_test.hpp
src/: getting_started.cpp  getting_started_conv.cpp  getting_started_matmul.cpp  getting_started_relu.cpp  main.cpp
